<resources>
    <string name="app_name">AppCommerce</string>
    <string name="title_categorias_populares">Categorias Populares</string>
    <string name="title_produtos_recentes">Produtos Recentes</string>
    <string name="title_activity_product_detail2">ProductDetailActivity2</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings da tela principal -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_comprar">COMPRAR</string>
    <string name="title_descricao">Descrição</string>

    <!-- Strings do menu drawer -->
    <string name="menu_drawer_home">Home</string>
    <string name="menu_drawer_minha_conta">Minha Conta</string>
    <string name="menu_drawer_categorias">Categorias</string>
    <string name="menu_drawer_minhas_compras">Minhas Compras</string>
    <string name="menu_drawer_meu_carrinho">Meu Carrinho</string>
    <string name="menu_drawer_configuracoes">Configurações</string>
    <string name="menu_drawer_sair">Sair</string>
    <string name="toogle_open">Open</string>
    <string name="toogle_close">Close</string>

    <!-- Strings do cadastro de usuário -->
    <string name="user_register_cadastrar">CADASTRAR</string>
    <string name="user_register_senha">Senha</string>
    <string name="user_register_email">Email</string>
    <string name="user_register_nome">Nome</string>
    <string name="user_register_title">Cadastro de Usuário</string>

    <!-- Strings do login do usuário -->
    <string name="user_login_senha">Senha</string>
    <string name="user_login_email">Email</string>
    <string name="user_login_esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="user_login_entrar">ENTRAR</string>
    <string name="user_login_cadastre_se_aqui">Cadastre-se aqui</string>
    <string name="user_login_nao_tem_cadastro">Não tem cadastro?</string>
    <string name="user_login_title">Login</string>

    <!-- Strings do perfil do usuário -->
    <string name="user_profile_title">Perfil</string>
    <string name="user_profile_sobrenome">Sobrenome</string>
    <string name="user_profile_endereco">Endereço</string>
    <string name="user_profile_rua_avenida">Rua/Avenida</string>
    <string name="user_profile_numero">Número</string>
    <string name="user_profile_complemento_apartamento_bloco">Complemento (Apartamento/Bloco)</string>
    <string name="user_profile_cidade">Cidade</string>
    <string name="user_profile_cep">CEP</string>
    <string name="user_profile_atualizar">ATUALIZAR</string>
    <string name="product_category_title">Categorias</string>

    <string-array name="states">
        <item>Acre (AC)</item>
        <item>Alagoas (AL)</item>
        <item>Amapá (AP)</item>
        <item>Amazonas (AM)</item>
        <item>Bahia (BA)</item>
        <item>Ceará (CE)</item>
        <item>Distrito Federal (DF)</item>
        <item>Espírito Santo (ES)</item>
        <item>Goiás (GO)</item>
        <item>Maranhão (MA)</item>
        <item>Mato Grosso (MT)</item>
        <item>Mato Grosso do Sul (MS)</item>
        <item>Minas Gerais (MG)</item>
        <item>Pará (PA)</item>
        <item>Paraíba (PB)</item>
        <item>Paraná (PR)</item>
        <item>Pernambuco (PE)</item>
        <item>Piauí (PI)</item>
        <item>Rio de Janeiro (RJ)</item>
        <item>Rio Grande do Norte (RN)</item>
        <item>Rio Grande do Sul (RS)</item>
        <item>Rondônia (RO)</item>
        <item>Roraima (RR)</item>
        <item>Santa Catarina (SC)</item>
        <item>São Paulo (SP)</item>
        <item>Sergipe (SE)</item>
        <item>Tocantins (TO)</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_title">Produtos</string>
    <string name="label_product_color">Cor</string>
    <string name="label_product_size">Tamanho</string>
    <string name="settings_title">Configurações</string>
    <string name="cart_title">Meu Carrinho</string>
    <string name="cart_button_finish">FINALIZAR</string>
    <string name="cart_label_total">Total</string>
    <string name="order_title">Minhas Compras</string>
    <string name="login_message">Email e/ou senha inválidos.</string>
    <string name="user_profile_msg_sucesso">Dados atualizados com sucesso.</string>
    <string name="user_profile_msg_nome">Preencha o campo nome.</string>
    <string name="user_profile_msg_sobrenome">Preencha o campo sobrenome.</string>
    <string name="user_profile_msg_email">Preencha o campo email.</string>
    <string name="user_profile_msg_rua_avenida">Preencha o campo rua/avenida.</string>
    <string name="user_profile_msg_numero">Preencha o campo número.</string>
    <string name="user_profile_msg_cidade">Preencha o campo cidade.</string>
    <string name="user_profile_msg_cep">Preencha o campo cep.</string>
    <string name="user_profile_msg_senha">Preencha o campo senha.</string>
    <string name="product_detail_cart_msg">Selecione uma cor e um tamanho.</string>
    <string name="cart_activity_payment_msg">Pagamento recusado! Verifique os dados e/ou limite do cartão.</string>
</resources>
