<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_drawer_home" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_menu_user_black"
        android:title="@string/menu_drawer_minha_conta" />

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_menu_category_black"
        android:title="@string/menu_drawer_categorias" />

    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_menu_orders_black"
        android:title="@string/menu_drawer_minhas_compras" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_menu_cart_black"
        android:title="@string/menu_drawer_meu_carrinho" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_drawer_configuracoes" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_drawer_sair" />
</menu>